--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<p>hello world</p>
-<p>this is a new feature</p>
-<p>add some extra features (dropdown)</p>
-<p>add some extra features (button)</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>hello world</h1>
+    <figure>
+        <img src="images/blogimage.jpg" alt="blog image">
+    </figure>
+</body>
+</html>
